--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: misimon <misimon@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/05/09 13:41:04 by misimon           #+#    #+#              #
-#    Updated: 2023/05/10 14:21:32 by misimon          ###   ########.fr        #
+#    Updated: 2023/05/10 15:31:20 by misimon          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,6 +20,7 @@ SRC =	main			\
 		Animal			\
 		WrongAnimal		\
 		WrongCat		\
+		Brain			\
 
 ALL_SRC += $(addsuffix .cpp, $(SRC))
 
